fix(sidebar): dont resize on ios touchmove

--- a/src/definitions/modules/sidebar.less
+++ b/src/definitions/modules/sidebar.less
@@ -270,6 +270,9 @@ body.pushable > .pusher {
        iOS
 ---------------*/
 
+html.ios .ui.sidebar {
+  touch-action: @iOStouchAction;
+}
 
 /*******************************
           Variations
